# habitat

./: .rustfmt.toml  BLDR-Dockerfile  BUILDING.md  CHANGELOG.md  Cargo.toml  RELEASE.md  Vagrantfile
.buildkite/: finish_release_pipeline.yaml
.buildkite/scripts/: build_mac_release.sh  create_release_bundle.sh  shared.sh
.expeditor/: config.yml  verify.pipeline.yml
components/bitbucket-api-client/: Cargo.toml
components/bitbucket-api-client/src/: client.rs  lib.rs
components/builder-admin/: Cargo.toml
components/builder-api/: Cargo.toml
components/builder-api-client/: Cargo.toml
components/builder-api-client/src/: lib.rs
components/builder-api-v2/: Cargo.toml
components/builder-api-v2/src/: main.rs
components/builder-db-migrator/: Cargo.toml
components/builder-db-migrator/tests/: functional.rs
components/builder-dbcache/: Cargo.toml
components/builder-depot/: Cargo.toml
components/builder-depot-client/: Cargo.toml
components/builder-depot-client/src/: lib.rs
components/builder-depot/doc/: api.apib  api.yaml
components/builder-depot/src/: server.rs
components/builder-jobsrv/: Cargo.toml
components/builder-notifysrv/: Cargo.toml  README.md
components/builder-notifysrv/src/: config.rs  data_store.rs  error.rs  lib.rs  main.rs
components/builder-notifysrv/src/migrations/: mod.rs  next_id.rs  notifications.rs
components/builder-notifysrv/src/server/: handlers.rs  mod.rs
components/builder-protocol/: Cargo.toml  build.rs
components/builder-router/: Cargo.toml
components/builder-scheduler/: Cargo.toml
components/builder-sessionsrv/: Cargo.toml
components/builder-vault/: Cargo.toml
components/builder-web/: .angular.cli.json  habitat.conf.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
components/builder-worker/: Cargo.toml
components/butterfly/: Cargo.toml  build.rs
components/dredd-rpc/: Cargo.toml
components/github-api-client/: Cargo.toml
components/hab/: plan.ps1
components/hab-butterfly/: plan.ps1
components/hab-studio/: Cargo.toml
components/http-client/: Cargo.toml
components/http-client-common/: Cargo.toml
components/launcher-client/: Cargo.toml
components/net/: Cargo.toml
components/pkg-export-tar/: Cargo.toml  build.rs
components/pkg-export-tar/src/: build.rs  cli.rs  error.rs  fs.rs  lib.rs  main.rs  rootfs.rs  tar.rs
components/plan-build/: plan.sh
components/plan-build-ps1/: plan.ps1
components/studio/: plan.ps1
components/sup/: Cargo.toml  plan.ps1
components/sup-protocol/: Cargo.toml  build.rs
pcreate/: pcreate.rb
support/: Procfile
support/builder/: config.sh  init-datastore.sh
support/ci/: build_a_thing.ps1  build_a_thing.sh  mac_ci_build.sh  rustfmt.sh
support/dredd/: start.sh
terraform/files/: postgres.yaml
test/: run_cargo_test.ps1  run_cargo_test.sh  run_clippy.sh  setup_test_env.sh
test/builder-api/: README
www/: Makefile
www/data/: author_bios.yml  demo_packaging_system_sidebar.yml  docs_sidebar.yml  linux_tutorial_sidebar.yml  tutorials_sidebar.yml  windows_tutorial_sidebar.yml
www/source/: index.html.slim
(+298 files in other folders)
