[package]
name = "habitat_builder_api_v2"
version = "0.0.0"
authors = ["Josh Black <raskchanky@gmail.com>"]

[dependencies]
rand = "^0.3"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

[[bin]]
name = "bldr-api-v2"
path = "src/main.rs"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
