[package]
name = "habitat_builder_api_v2"
version = "0.0.0"
authors = ["Josh Black <raskchanky@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "*"
serde_json = "*"
serde_derive = "*"

[[bin]]
name = "bldr-api-v2"
path = "src/main.rs"

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["json"]
