[package]
name = "habitat_pkg_export_tar"
version = "0.0.0"
authors = ["Nell Shamrell <nellshamrell@gmail.com>"]
workspace = "../../"

[lib]
name = "habitat_pkg_export_tar"

[[bin]]                                                                
name = "hab-pkg-export-tar"                                        
path = "src/main.rs"                                  
doc = false  
